--- a/client/main.scss
+++ b/client/main.scss
@@ -20,11 +20,26 @@
     display: flex;
     justify-content: center;
     align-items: center;    
+    flex-direction: column;
 }
 
-.game-board {
+.gameboard {
     height: 500px;
     width: 500px;
     border: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+}
 
+.cell-row {
+    display: flex;
+    flex-direction: row;
+    flex: auto;
+}
+
+.cell {
+    min-height: 10px;
+    min-width: 10px;
+    background-color: #808080;
+    flex: auto;
 }
