--- a/client/main.scss
+++ b/client/main.scss
@@ -1,3 +1,7 @@
+$cell-color: #808080;
+$game-board-height: 500px;
+$game-board-width: 500px;
+
 #root {
     height: 100%;
     width: 100%;
@@ -18,14 +22,21 @@
 
 .play-area {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;    
     flex-direction: column;
+    height: 80vh;
+}
+
+.controls {
+    display: flex;
+    justify-content: space-between;
+    width: $game-board-width;
 }
 
 .gameboard {
-    height: 500px;
-    width: 500px;
+    height: $game-board-height;
+    width: $game-board-width;
     border: 1px solid #000;
     display: flex;
     flex-direction: column;
@@ -38,8 +49,8 @@
 }
 
 .cell {
-    min-height: 10px;
-    min-width: 10px;
-    background-color: #808080;
+    min-height: 8px;
+    min-width: 8px;
+    background-color: $cell-color;
     flex: auto;
 }
